@@ -97,7 +97,9 @@ Scalar DirectionalSampling::computeContribution(const ScalarCollection & roots)
   // Is the origin in the failure space?
   // Here, we know that the getOriginValue() method will not throw an exception, as we already called the solve() method
   // of the root strategy, which in turn initialized the computation of the origin value.
-  if (standardEvent_.getDomain().contains(Point(1, rootStrategy_.getOriginValue()))) estimate = 1.0 - estimate;
+  const Scalar originValue = rootStrategy_.getOriginValue();
+  const Bool inEvent = standardEvent_.getDomain().contains(Point(1, originValue));
+  if (inEvent) estimate = 1.0 - estimate;
   return estimate;
 }
 
@@ -144,8 +146,46 @@ Scalar DirectionalSampling::computeMeanContribution(const ScalarCollection & roo
 /* Compute the contribution of a set of directions direction to the probability */
 Scalar DirectionalSampling::computeTotalContribution(const Sample & directionSample)
 {
-  const UnsignedInteger sampleSize = directionSample.getSize();
   const UnsignedInteger dimension = directionSample.getDimension();
+  // First check if the value at the origin is stable wrt the event
+  // This computation has to be done only once, so we use the exception
+  // to detect the first call to getOriginValue
+  const Point origin(dimension);
+  try
+    {
+      // Doesn't throw an exception if already computed
+      (void) rootStrategy_.getOriginValue();
+    }
+  catch (const NotDefinedException &)
+    {
+      // Compute the value at the origin
+      const Point originValue = standardFunction_(origin);
+      const Bool inEvent = standardEvent_.getDomain().contains(originValue);
+      // Check if the origin is stable wrt the value at the origin
+      Scalar delta = 0.0;
+      // std::abs is here to test both +0.0 and -0.0
+      if (std::abs(originValue[0]) == 0.0) delta = SpecFunc::ScalarEpsilon;
+      else delta = SpecFunc::ScalarEpsilon * std::abs(originValue[0]);
+      const Scalar valueUp   = originValue[0] + delta;
+      const Scalar valueDown = originValue[0] - delta;
+      const Bool sameAsUp = (inEvent == standardEvent_.getDomain().contains(Point(1, valueUp)));
+      const Bool sameAsDown = (inEvent == standardEvent_.getDomain().contains(Point(1, valueDown)));
+      // If both shift lead to a new point with a different classification than the origin, the algorithm is not applicable. It is hopefully an exceptional situation
+      if ((!sameAsUp) && (!sameAsDown)) throw InternalException(HERE) << "No way to stabilize the origin wrt the event in DirectionalSampling. This algorithm cannot be used to quantified the event=" << standardEvent_;
+      // If a small shift in the value at the origin changes the status wrt the event, it is unstable. Force to be on one side by shifting the standard function toward the stable direction
+      if (sameAsUp != sameAsDown)
+	{
+	  const Scalar shift = (sameAsUp ? delta : -delta);
+	  rootStrategy_.setOriginValue(sameAsUp ? valueUp : valueDown);
+	  standardFunction_ = standardFunction_ + LinearFunction(Point(dimension), Point(1, shift), Matrix(1, dimension));
+	}
+      else
+	{
+	  // Don't forget to set the origin value also when it is stable!
+	  rootStrategy_.setOriginValue(originValue[0]);
+	}
+    } // catch
+  const UnsignedInteger sampleSize = directionSample.getSize();
   Scalar totalContribution = 0.0;
   // meanPointInEventDomain = Point(dimension);
   UnsignedInteger contributionNumber = 0;
@@ -158,7 +198,7 @@ Scalar DirectionalSampling::computeTotalContribution(const Sample & directionSam
     // 1. Build the scalar function along the direction
     // 1.1 Build the linear function along the direction
     for (UnsignedInteger indexComponent = 0; indexComponent < dimension; ++indexComponent) linear(indexComponent, 0) = direction[indexComponent];
-    const LinearFunction ray(Point(1, 0.0), Point(dimension, 0.0), linear);
+    const LinearFunction ray(Point(1, 0.0), origin, linear);
     // 1.2 Build the function along the ray
     const ComposedFunction functionAlongRay(standardFunction_, ray);
     // 2. Solve the function along the ray
